syntax = "proto3";

option go_package = "model/message/message";

package message;

enum Status {
  NONE = 0;
  OK = 200;
  INVALID = 400;
  UNAUTHORIZED = 401;
  FORBIDDEN = 403;
  NOT_FOUND = 404;
  EXISTED = 409;
  ERROR = 500;
}

message APIRequest {
  string path = 1;
  string method = 2;
  string content = 3;
  map<string, string> params = 4;
  map<string, string> headers = 5;
}

message APIResponse {
  Status status = 1;
  string message = 2;
  map<string, string> headers = 3;
  string content = 4;
  int64 total = 5;
  string errorCode = 6;
}

service APIService {
  rpc Call (APIRequest) returns (APIResponse) {};
  rpc GetURL (APIRequest) returns (APIResponse) {};
  rpc Test (APIRequest) returns (APIResponse) {};
}